syntax = "proto3";


option go_package = "/protobufs";


message CreateUserRequest {
    string session_id = 1;
}


message CreateUsersResponse {
    string user_id = 1;
}


service UsersService{
    rpc CreateUser(CreateUserRequest) returns (CreateUsersResponse);
}